aarch32-tests/tests/snapshots/versatileab/prefetch-exception-a32-armv7r-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is a prefetch abort exception example
prefetch abort occurred
IFSR (Fault Status Register): Ifsr { sd: false, domain: 0, status: Ok(DebugEvent) }
IFAR (Faulting Address Register): Ifar(0)
caught bkpt_from_a32
Doing it again
prefetch abort occurred
IFSR (Fault Status Register): Ifsr { sd: false, domain: 0, status: Ok(DebugEvent) }
IFAR (Faulting Address Register): Ifar(0)
caught bkpt_from_a32
Skipping instruction
Recovered from fault OK!
