aarch32-tests/tests/snapshots/versatileab/prefetch-exception-t32-thumbv4t-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is a prefetch abort exception example
prefetch abort occurred
caught bkpt_from_t32
Doing it again
prefetch abort occurred
caught bkpt_from_t32
Skipping instruction
Recovered from fault OK!
