aarch32-tests/tests/snapshots/versatileab/svc-a32-armv7r-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
x = 1, y = 2, z = 3.000
In svc_handler, with arg=0xabcdef
In svc_handler, with arg=0x456789
x = 1, y = 2, z = 3.000
